shimlang/test_scripts/errors/missing_return_semicolon.stderr
Parse Error:
 3 | }
     ^
Error: Expected semicolon after `return <expr>`, found RCurly
Failed to parse script
